--- a/test/test/test.vcxproj.filters
+++ b/test/test/test.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="stb_image.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Camera.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
